# raton

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
fuzz/: Cargo.toml  parser_seed.txt
fuzz/fuzz_targets/: code_generator.rs  fuzz.rs  parser.rs  virtual_machine.rs
src/: ast.rs  benches.rs  bytecode.rs  bytecode_generator.rs  bytecode_vm.rs  lib.rs  linker.rs  parser.rs  prelude.rs  value.rs
src/ast/: expression.rs  mod.rs  statement.rs
src/bytecode/: mod.rs
src/common/: mod.rs  operator.rs  value.rs
src/compiler/: bytecode_generator.rs  code_generator.rs  linker.rs  mod.rs  parser.rs
src/runtime/: function.rs  mod.rs  ty.rs  value.rs
tests/: tests.rs
